# cppPrimerQuery

./: AndQuery.cpp  AndQuery.h  BinaryQuery.h  CMakeLists.txt  NotQuery.cpp  NotQuery.h  OrQuery.cpp  OrQuery.h  Query.cpp  Query.h  QueryResult.h  Query_base.h  README  TextQuery.cpp  TextQuery.h  WordQuery.h  data  main.cpp
